--- a/Otus.Caching.WebApp1/Otus.Caching.WebApp1.csproj
+++ b/Otus.Caching.WebApp1/Otus.Caching.WebApp1.csproj
@@ -9,6 +9,7 @@
       <PackageReference Include="LazyCache.AspNetCore" Version="2.0.4" />
       <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.6" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+      <PackageReference Include="Scrutor" Version="3.2.1" />
       <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
     </ItemGroup>
 
