response caching fix

--- a/Otus.Caching.WebApp1/appsettings.Development.json
+++ b/Otus.Caching.WebApp1/appsettings.Development.json
@@ -2,8 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore.ResponseCaching": "Trace",
+      "Microsoft.Hosting.Lifetime": "Warning",
+      "System.Net.Http": "Warning"
     }
   }
 }
